Feature #3447 : File Upload Plugin - adding jQuery file upload plugin - adding view generator tag that handles the use of the jQuery file upload plugin - adding manager to retrieve uploaded files on server side

--- a/config-core/src/main/config/properties/org/silverpeas/multilang/generalMultilang.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/multilang/generalMultilang.properties
@@ -34,7 +34,7 @@ GML.allFP = Toutes
 GML.agenda 						= Agenda
 GML.attachments 					= Fichiers joints
 GML.permalink             			= Permalien
-GML.noLockedFile           = Aucun fichier r\u00e9serv\u00e9 !
+GML.noLockedFile           = Aucun fichier r\u00E9serv\u00E9 !
 GML.author						= Auteur
 GML.publisher						= Publieur
 GML.affichierCalendrier  = Afficher le calendrier
@@ -45,21 +45,21 @@ GML.import						= Importer
 GML.back						= Retour
 
 GML.cancel						= Annuler
-GML.categories 						= Cat\u00e9gories
-GML.category	 					= Cat\u00e9gorie
-GML.cellularPhoneNumber 	                        = T\u00e9l. mobile
+GML.categories 						= Cat\u00E9gories
+GML.category	 					= Cat\u00E9gorie
+GML.cellularPhoneNumber 	                        = T\u00E9l. mobile
 GML.close						= Fermer
-GML.company 						= Soci\u00e9t\u00e9
+GML.company 						= Soci\u00E9t\u00E9
 GML.component                                           = KM Service
 GML.copy 						= Copier
-GML.create						= Cr\u00e9er
-GML.createPublication			                = Cr\u00e9er une publication
-GML.createTheme						= Cr\u00e9er un th\u00e8me
+GML.create						= Cr\u00E9er
+GML.createPublication			                = Cr\u00E9er une publication
+GML.createTheme						= Cr\u00E9er un th\u00E8me
 GML.cut							= Couper
-GML.generatePDF						= G\u00e9n\u00e9rer un PDF
+GML.generatePDF						= G\u00E9n\u00E9rer un PDF
 
 GML.date						= Date
-GML.dateBegin 						= Date de d\u00e9but
+GML.dateBegin 						= Date de d\u00E9but
 GML.dateEnd 						= Date de fin
 GML.day							= Jour
 GML.delete						= Supprimer
@@ -69,7 +69,7 @@ GML.detail						= D&eacute;tail
 GML.domain						= Espace
 GML.domainManager				= Gestionnaire de domaine
 GML.domains						= Espaces
-GML.download						= T\u00e9l\u00e9chargement
+GML.download						= T\u00E9l\u00E9chargement
 
 GML.eMail 						= E-mail
 GML.empty                                               = Vide
@@ -79,21 +79,21 @@ GML.errors						= Erreurs
 
 GML.faxNumber 						= Fax
 GML.file						= Fichier
-GML.firstName                                           = Pr\u00e9nom
+GML.firstName                                           = Pr\u00E9nom
 
 GML.groupe						= Groupe
 GML.groupes						= Groupes
 GML.guest						= Invite
 
-GML.head						= Ent\u00eate
+GML.head						= Ent\u00EAte
 GML.help						= Aide
-GML.homePhoneNumber 			                = T\u00e9l. domicile
+GML.homePhoneNumber 			                = T\u00E9l. domicile
 
-GML.insertHere						= Ins\u00e9rer ici
+GML.insertHere						= Ins\u00E9rer ici
 
 GML.jobPeas						= Service
 
-GML.keyWords						= Mots cl\u00e9s
+GML.keyWords						= Mots cl\u00E9s
 GML.kmmanager                   = Gestionnaire du Plan de Classement
 
 GML.label						= Libell&eacute;
@@ -132,14 +132,14 @@ GML.password 					= Mot de passe
 GML.passwordAgain 				= Confirmez le mot de passe
 GML.paste						= Coller
 GML.path						= Emplacement
-GML.phoneNumber 				= T\u00e9l\u00e9phone
+GML.phoneNumber 				= T\u00E9l\u00E9phone
 GML.position 					= Poste
 GML.public 						= Publique
-GML.previous					= Pr\u00e9c\u00e9dent
+GML.previous					= Pr\u00E9c\u00E9dent
 GML.print						= Imprimer
-GML.priority 					= Priorit\u00e9
-GML.privateFS 					= Priv\u00e9e
-GML.privateMS 					= Priv\u00e9
+GML.priority 					= Priorit\u00E9
+GML.privateFS 					= Priv\u00E9e
+GML.privateMS 					= Priv\u00E9
 GML.publication					= Publication
 GML.publications				= Publications
 GML.publish						= Publier
@@ -153,20 +153,20 @@ GML.space						= Espace
 GML.status						= Etat
 GML.subscription                = Abonnement
 GML.subscribe                   = S'abonner
-GML.unsubscribe                 = Se d\u00e9sabonner
-GML.shrink						= R\u00e9duire
-GML.surname						= Pr\u00e9nom
-GML.selection					= S\u00e9lection
-GML.select						= S\u00e9lectionnez...
+GML.unsubscribe                 = Se d\u00E9sabonner
+GML.shrink						= R\u00E9duire
+GML.surname						= Pr\u00E9nom
+GML.selection					= S\u00E9lection
+GML.select						= S\u00E9lectionnez...
 
-GML.toSelect						= S\u00e9lectionner
+GML.toSelect						= S\u00E9lectionner
 GML.theField						= le champ
-GML.theme						= Th\u00e8me
+GML.theme						= Th\u00E8me
 GML.title						= Titre
 GML.type						= Type
 
 GML.unlock					        = D&eacute;v&eacute;rouiller
-GML.upload						= T\u00e9l\u00e9chargement
+GML.upload						= T\u00E9l\u00E9chargement
 GML.user						= Utilisateur
 GML.users						= Utilisateurs
 GML.user_s                      = utilisateur(s)
@@ -176,12 +176,12 @@ GML.validate					= Valider
 GML.viewCalendar				= Afficher le calendrier
 GML.calendar                    = Calendrier
 GML.week                        = Semaine
-GML.year                        = Ann\u00e9e
+GML.year                        = Ann\u00E9e
 GML.yes						    = Oui
 
-# Titre fen\u00eatre
+# Titre fen\u00EAtre
 GML.popupTitle						= ___/ Silverpeas&#8482; - Collaborative Portal Organizer \\_________________________________________
-GML.trademark						= &copy; 2001-2013 <a href\="http\://www.silverpeas.com" target\="_blank">Silverpeas</a> - Tous droits r\u00e9serv\u00e9s
+GML.trademark						= &copy; 2001-2013 <a href\="http\://www.silverpeas.com" target\="_blank">Silverpeas</a> - Tous droits r\u00E9serv\u00E9s
 
 # Formulaire
 GML.thefield						= Le champ
@@ -216,48 +216,48 @@ GML.shortJour7 = Sam
 GML.shortJour1 = Dim
 
 GML.mois0 = Janvier
-GML.mois1 = F\u00e9vrier
+GML.mois1 = F\u00E9vrier
 GML.mois2 = Mars
 GML.mois3 = Avril
 GML.mois4 = Mai
 GML.mois5 = Juin
 GML.mois6 = Juillet
-GML.mois7 = Ao\u00fbt
+GML.mois7 = Ao\u00FBt
 GML.mois8 = Septembre
 GML.mois9 = Octobre
 GML.mois10 = Novembre
-GML.mois11 = D\u00e9cembre
+GML.mois11 = D\u00E9cembre
 
 #Controle JavaScript
 GML.ThisFormContains = Ce formulaire contient
-GML.MustBeFilled = doit \u00eatre renseign\u00e9
+GML.MustBeFilled = doit \u00EAtre renseign\u00E9
 GML.MustContainsNumber = doit contenir un entier
 GML.MustContainsFloat = doit contenir un nombre
 GML.MustContainsCorrectDate = doit contenir une date
-GML.MustContainsPostDateTo = doit contenir une date post\u00e9rieure \u00e0
-GML.MustContainsPostOrEqualDateTo = doit contenir une date post\u00e9rieure ou \u00e9gale \u00e0
-GML.MustContainsPostDate = doit contenir une date post\u00e9rieure \u00e0 aujourd'hui
-GML.MustContainsPostOrEqualDate = doit contenir une date post\u00e9rieure ou \u00e9gale \u00e0 aujourd'hui
+GML.MustContainsPostDateTo = doit contenir une date post\u00E9rieure \u00E0
+GML.MustContainsPostOrEqualDateTo = doit contenir une date post\u00E9rieure ou \u00E9gale \u00E0
+GML.MustContainsPostDate = doit contenir une date post\u00E9rieure \u00E0 aujourd'hui
+GML.MustContainsPostOrEqualDate = doit contenir une date post\u00E9rieure ou \u00E9gale \u00E0 aujourd'hui
 GML.MustContainsDateBetween1 = doit contenir une date entre le
 GML.MustContainsDateBetween2 = et le
 GML.MustContainsCorrectHour = doit contenir une heure correcte
-GML.MustContainsLettersAndDigitsOnly = doit \u00eatre compos\u00e9 uniquement de lettres et de chiffres
+GML.MustContainsLettersAndDigitsOnly = doit \u00EAtre compos\u00E9 uniquement de lettres et de chiffres
 
 #Plan de classement
 GML.PDC = Plan de Classement
-GML.PDCParam = Param\u00e9trer l'utilisation du PDC
+GML.PDCParam = Param\u00E9trer l'utilisation du PDC
 GML.PDCNewPosition = Ajouter une position ...
 GML.PDCValidatePosition = Valider cette position
 GML.PDCDeletePosition = Supprimer la position
-GML.PDCPredefinePositions = D\u00e9finir le classement par d\u00e9faut
-GML.PDCPositionsPredefinition = D\u00e9finition du classement par d\u00e9faut
+GML.PDCPredefinePositions = D\u00E9finir le classement par d\u00E9faut
+GML.PDCPositionsPredefinition = D\u00E9finition du classement par d\u00E9faut
 
-#Contr\u00f4les d'acc\u00e8s
-GML.ForbiddenAccessContent = Vous n'avez pas les droits suffisants pour acc\u00e9der \u00e0 l'information d\u00e9sir\u00e9e !
+#Contr\u00F4les d'acc\u00E8s
+GML.ForbiddenAccessContent = Vous n'avez pas les droits suffisants pour acc\u00E9der \u00E0 l'information d\u00E9sir\u00E9e !
 GML.DocumentNotFound = L'information que vous souhaitez consulter n'existe plus !
 
-GML.creationDate = Cr\u00e9\u00e9 le
-GML.updateDate = Modifi\u00e9 le
+GML.creationDate = Cr\u00E9\u00E9 le
+GML.updateDate = Modifi\u00E9 le
 
 GML.language = Langue
 GML.translationRemove = Supprimer cette traduction
@@ -268,56 +268,56 @@ GML.ligne = - Ligne
 GML.colonne = Colonne
 GML.valeur = Valeur
 GML.obligatoire = Ce champ est obligatoire
-GML.nbCarMax = La valeur ne doit pas d\u00e9passer
+GML.nbCarMax = La valeur ne doit pas d\u00E9passer
 GML.nbCarMin = La valeur doit comporter au moins
-GML.caracteres = caract\u00e8res
+GML.caracteres = caract\u00E8res
 GML.errorCsvFile = Erreur, on ne peut uploader que des fichiers d'extension .csv
 
 #Export CSV
-GML.ExportSucceeded = Export r\u00e9ussi.
-GML.ExportFailed = L'export a \u00e9chou\u00e9.
+GML.ExportSucceeded = Export r\u00E9ussi.
+GML.ExportFailed = L'export a \u00E9chou\u00E9.
 GML.ExportInProgress = Export en cours...
 GML.ExportCSV = Exporter en CSV
 
-GML.DragNDropExpand = Pour d\u00e9poser rapidement un fichier...
+GML.DragNDropExpand = Pour d\u00E9poser rapidement un fichier...
 GML.DragNDropCollapse = Fermer
 
 GML.personalSpace = Espace personnel
-GML.linkTo = R\u00e9f\u00e9rencer
+GML.linkTo = R\u00E9f\u00E9rencer
 
 GML.or = ou
-GML.galleries = Phototh\u00e8ques
-GML.applet.dnd.alt=Applet pour le glisser/d\u00e9poser de fichiers
+GML.galleries = Phototh\u00E8ques
+GML.applet.dnd.alt=Applet pour le glisser/d\u00E9poser de fichiers
 
 GML.user.type.A = Administrateur
 GML.user.type.D = Gestionnaire de domaine
 GML.user.type.K = Gestionnaire du Plan de Classement
 GML.user.type.U = Utilisateur
-GML.user.type.G = Invit\u00e9
+GML.user.type.G = Invit\u00E9
 
 GML.notification.send = Envoyer un message
 GML.notification.subject = Sujet
 GML.notification.message = Message
 
-GML.user.online = Connect\u00e9(e)
-GML.user.online.for = Connect\u00e9(e) depuis
-GML.user.offline = D\u00e9connect\u00e9(e)
+GML.user.online = Connect\u00E9(e)
+GML.user.online.for = Connect\u00E9(e) depuis
+GML.user.offline = D\u00E9connect\u00E9(e)
 
 GML.mandatory = Obligatoire
 
 GML.and = et
-GML.reset = Remise \u00e0 z\u00e9ro
+GML.reset = Remise \u00E0 z\u00E9ro
 
-GML.operations.setupComponent = Param\u00e9trer cette application
+GML.operations.setupComponent = Param\u00E9trer cette application
 
 GML.to = au
-GML.at = \u00e0
+GML.at = \u00E0
 GML.At = A
 GML.From = De
-GML.linkToVisit = Lien \u00e0 visiter
+GML.linkToVisit = Lien \u00E0 visiter
 GML.Show = Afficher :
 
-GML.selectAValue = Veuillez s\u00e9lectionner une valeur
+GML.selectAValue = Veuillez s\u00E9lectionner une valeur
 
 GML.Validation = Validation
 GML.pagination.FirstPage=<<
@@ -330,23 +330,35 @@ GML.internalDomain=Domaine mixte
 # User account
 GML.user.account.state.UNKNOWN=Etat du compte utilisateur inconnu
 GML.user.account.state.VALID=Compte valide
-GML.user.account.state.BLOCKED=Compte bloqu\u00e9
-GML.user.account.state.EXPIRED=Compte expir\u00e9
-GML.user.account.state.DELETED=Compte supprim\u00e9
-GML.user.lastConnection = Derni\u00e8re connexion
+GML.user.account.state.BLOCKED=Compte bloqu\u00E9
+GML.user.account.state.EXPIRED=Compte expir\u00E9
+GML.user.account.state.DELETED=Compte supprim\u00E9
+GML.user.lastConnection = Derni\u00E8re connexion
 
 # Messages communs
-GML.validation.create=Les informations ont bien \u00e9t\u00e9 enregistr\u00e9es.
-GML.validation.update=Les informations ont bien \u00e9t\u00e9 mises \u00e0 jour.
-GML.validation.delete=Les informations ont bien \u00e9t\u00e9 supprim\u00e9es.
+GML.upload.choose.browse=Parcourir...
+GML.upload.choose.file=Choisir un fichier
+GML.upload.choose.files=Choisir les fichiers
+GML.upload.dragAndDrop.file=D\u00E9posez ici le fichier
+GML.upload.dragAndDrop.files=D\u00E9posez ici les fichiers
+GML.upload.sending.file=Envoi du fichier *...
+GML.upload.sending.files=Envoi de * fichiers...
+GML.upload.warning=Des fichiers sont en cours d'envoi...<br/>Merci de patienter.
+GML.upload.warning.file.limit=Il n'est pas possible d'envoyer plus d'un fichier.
+GML.upload.warning.files.limit=Il n'est pas possible d'envoyer plus de * fichiers.
+GML.upload.warning.file.limit.reached=Vous avez atteint la limite d'un fichier.
+GML.upload.warning.files.limit.reached=Vous avez atteint la limite de * fichiers.
+GML.validation.create=Les informations ont bien \u00E9t\u00E9 enregistr\u00E9es.
+GML.validation.update=Les informations ont bien \u00E9t\u00E9 mises \u00E0 jour.
+GML.validation.delete=Les informations ont bien \u00E9t\u00E9 supprim\u00E9es.
 GML.help.dialog.title = Aide
 GML.information.dialog.title = Information
 GML.confirmation.dialog.title = Confirmation
-GML.preview = Pr\u00e9visualiser le fichier
-GML.preview.dialog.title = Aper\u00e7u
+GML.preview = Pr\u00E9visualiser le fichier
+GML.preview.dialog.title = Aper\u00E7u
 GML.preview.dialog.title.of = de
-GML.preview.help.file.previous = Aper\u00e7u du fichier pr\u00e9c\u00e9dent
-GML.preview.help.file.next = Aper\u00e7u du fichier suivant
+GML.preview.help.file.previous = Aper\u00E7u du fichier pr\u00E9c\u00E9dent
+GML.preview.help.file.next = Aper\u00E7u du fichier suivant
 GML.view = Visualiser le fichier
 GML.view.dialog.title = Visualisation
 GML.view.dialog.title.of = de
