Feature 82: Updating delete localized file button Adding confirmation button Using new function tld for Silverpeas

--- a/config-core/src/main/config/properties/org/silverpeas/util/attachment/multilang/attachment.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/util/attachment/multilang/attachment.properties
@@ -58,11 +58,11 @@ maximum = Maximum
 
 confirm.checkin.message=Voulez vous enregistrer vos modifications ?
 
-CopyLink = Pour copier le lien vers ce fichier : Clique droit puis 'Copier le raccourci'
+CopyLink = Pour copier le lien vers ce fichier : Clique droit puis \'Copier le raccourci\'
 
 attachment.SameFileNameAlreadyCheckout = Vous avez d\u00e9j\u00e0 r\u00e9serv\u00e9 un fichier portant le m\u00eame nom !<br>Afin d'\u00e9viter d'\u00e9craser d'\u00e9ventuelles modifications, vous ne pouvez pas r\u00e9server simultan\u00e9ment deux fichiers ayant le m\u00eame nom.
 
-attachment.uploadFailed = L'envoi semble avoir \u00e9chou\u00e9
+attachment.uploadFailed = L\'envoi semble avoir \u00e9chou\u00e9
 
 attachment.version.label=Type de la version
 attachment.version_public.label=Public
@@ -106,10 +106,11 @@ attachment.xmlForm.View = Plus...
 attachment.xmlForm.ToolTip = Informations compl\u00e9mentaires sur 
 attachment.share = Partager ce fichier
 
-attachment.checkOutAndDownload = R\u00e9server et t\u00e9l\u00e9charger
-attachment.checkOutAndEditOnline = Editer en ligne
-attachment.dialog.delete = Supprimer le fichier ?
-attachment.dialog.checkout.nok = Fichier d\u00e9j\u00e0 r\u00e9serv\u00e9 ou erreur lors de la r\u00e9servation
+attachment.checkOutAndDownload=R\u00e9server et t\u00e9l\u00e9charger
+attachment.checkOutAndEditOnline=Editer en ligne
+attachment.dialog.delete=Supprimer le fichier ?
+attachment.dialog.checkout.nok=Fichier d\u00e9j\u00e0 r\u00e9serv\u00e9 ou erreur lors de la r\u00e9servation
+attachment.dialog.delete.lang=Supprimer le fichier dans la langue s\u00e9lectionn\u00e9e ?
 attachment.dialog.comment=Commentaires
 attachment.revert=Abandonner mes modifications
 
