on feature #82, adding an explicit 'Add a file' creation action in files area

--- a/config-core/src/main/config/properties/org/silverpeas/util/attachment/multilang/attachment.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/util/attachment/multilang/attachment.properties
@@ -83,3 +83,5 @@ attachment.dialog.delete.lang=Supprimer le fichier dans la langue s\u00e9lection
 attachment.dialog.comment=Commentaires sur la version
 attachment.revert=Abandonner mes modifications
 attachment.dialog.button.deleteAll = Tout supprimer
+
+attachment.add = Ajouter un fichier...
