--- a/ejb-core/authentication/pom.xml
+++ b/ejb-core/authentication/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.silverpeas.core</groupId>
     <artifactId>ejb-core</artifactId>
-    <version>5.11.2</version>
+    <version>5.11.3-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 	
