--- a/lib-core/pom.xml
+++ b/lib-core/pom.xml
@@ -381,31 +381,14 @@
   <build>
     <testResources>
       <testResource>
-        <directory>src/test/resources</directory>
-        <filtering>true</filtering>
-        <excludes>
-          <exclude>**/*.odp</exclude>
-          <exclude>**/index/**/*</exclude>
-          <exclude>**/*.odt</exclude>
-          <exclude>**/*.doc</exclude>
-          <exclude>**/*.docx</exclude>
-          <exclude>**/*.zip</exclude>
-          <exclude>**/*.tif</exclude>
-          <exclude>**/*.tar.gz</exclude>
-          <exclude>**/*.tar.bz2</exclude>
-          <exclude>**/*.sql</exclude>
-          <exclude>opendj/**</exclude>
-        </excludes>
-      </testResource>
-      <testResource>
         <directory>${basedir}/src/test/resources</directory>
         <filtering>false</filtering>
         <includes>
           <include>**/index/**/*</include>
+          <include>index/kmelia*/**/*.*</include>
           <include>**/*.odp</include>
           <include>**/*.odt</include>
           <include>**/*.doc</include>
-          <include>**/*.tif</include>
           <include>**/*.docx</include>
           <include>**/*.zip</include>
           <include>**/*.tar.gz</include>
@@ -419,8 +402,9 @@
         <directory>${basedir}/src/test/resources</directory>
         <filtering>true</filtering>
         <excludes>
-          <exclude>**/*.odp</exclude>
           <exclude>index/kmelia*/**/*.*</exclude>
+          <exclude>**/index/**/*</exclude>
+          <exclude>**/*.odp</exclude>
           <exclude>**/*.odt</exclude>
           <exclude>**/*.doc</exclude>
           <exclude>**/*.docx</exclude>
