integrating feature #351 changing labels to make it more understandable

--- a/config-core/src/main/config/properties/org/silverpeas/pdcSubscriptionPeas/multilang/pdcSubscriptionBundle.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/pdcSubscriptionPeas/multilang/pdcSubscriptionBundle.properties
@@ -36,10 +36,10 @@ confirmDeleteSubscription = \u00cates-vous s\u00fbr(e) de vouloir supprimer la s
 Path = Mes abonnements
 
 SubscriptionType = Type d'abonnement
-SubscriptionType.USER = Utilisateur
-SubscriptionType.GROUP = Groupe
-SubscriptionMethod.FORCED = (par un autre utilisateur)
-SubscriptionMethod.SELF_CREATION =
+SubscriptionType.USER = 
+SubscriptionType.GROUP = via le groupe
+SubscriptionMethod.FORCED = Forc\u00e9
+SubscriptionMethod.SELF_CREATION = Personnel
 Operations = Op\u00e9rations
 
 pdc = Plan de classement
