--- a/config-core/src/main/config/properties/org/silverpeas/subscription/multilang/subscriptionBundle.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/subscription/multilang/subscriptionBundle.properties
@@ -24,7 +24,7 @@
 subscription.panel.title = Gestion des abonnements
 subscription.panel.forced.modify=Modifier les abonnements forc\u00E9s
 subscription.panel.forced.list=Abonnements forc\u00E9s
-subscription.panel.selfCreation.list=Abonnements individuels
+subscription.panel.selfCreation.list=Abonnements personnels
 subscription.panel.selfCreation.list.help=Ces abonnements ne peuvent \u00EAtre modifi\u00E9s que par la personne qui l'a contract\u00E9
 subscription.panel.list.group={0} {0,choice, 1\#groupe| 1<groupes}
 subscription.panel.list.user={0} {0,choice, 1#utilisateur| 1<utilisateurs}
